# journalism-cooperative

./: .env.db.env.secret  .env.prod.env.secret  .env.source.sh  .gitignore  Dockerfile  app-topology.yml.secret  deploy.sh  docker-compose.prod.yml  netlify.toml  nuxt.config.ts  package-lock.json  package.json  push.sh  run.sh
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
components/: EmailSignup.vue
components/global/: something.stories.ts  something.vue
pages/: index.vue
server/: .dockerignore  .env.secret  .env.source.sh  Cargo.toml  Dockerfile  build.sh  curl.sh  docker-compose.yml  key.sh  schema.sql  sql.sh  sqlx-data.json  testserver.sh
server/src/: main.rs  schema.sql
server/testqueries/: create_unsubscribe.sql  new_email.sql  unsubscribe.sql  verify.sql
site/: nuxt.config.ts  package-lock.json  package.json
site/components/: EmailSignup.vue  VoteBar.vue  Voting.vue  VotingApproval.vue  VotingPrioritization.vue  voting.utils.ts
site/content/blog/: yo.md
site/pages/: index.vue  verify.vue
site/pages/blog/: _slug.vue  index.vue
site/plugins/: axios.ts
site/styles/: main.css
styles/: main.css
