[package]
name = "email_server"
version = "0.1.0"
authors = ["Blaine Hansen <faichenshing@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.2"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres", "offline"] }
# actix-web = { version = "3", features = ["openssl"] }
actix-web = "3"
actix-cors = "0.4"
# openssl = { version = "0.10", features = ["v110"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

validator = { version = "0.11", features = ["derive"] }

rand = "0.7"
base64 = "0.13"

log = "0.4"
env_logger = "0.7"
lazy_static = "1"
